# plbindgen

./: Cargo.toml  README.md
src/: api.rs  args.rs  main.rs  templates.rs
templates/: makefile.pl.j2  package.j2  record.j2
